--- a/style.css
+++ b/style.css
@@ -1,12 +1,64 @@
 * {
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 html,
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
+  font-size: 20px;
 }
 
 /* Add styles here! */
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+.max-width-wrapper {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.intro-chunk {
+  padding-top: 96px;
+  padding-bottom: 64px;
+  max-width: 400px;
+}
+
+.card {
+  background-color: hsl(0deg, 0%, 100%);
+  width: 800px;
+  padding: 8px 24px;
+  padding-bottom: 32px;
+  border-bottom: 8px solid hsl(0deg, 0%, 60%);
+}
+
+.indented-heading {
+  background-color: hsl(45deg, 100%, 50%);
+  padding: 16px 32px;
+  margin-left: -32px;
+  width: fit-content;
+  margin-top: 0;
+
+  border-bottom: 8px solid hsl(45deg, 100%, 40%);
+}
+
+p {
+  line-height: 1.5;
+  margin-top: 24px;
+  margin-bottom: 0;
+}
+
+h1 {
+  margin-top: 0;
+  margin-bottom: 48px;
+}
+
+main {
+  padding: 60px 0;
+  background-color: hsl(0deg, 0%, 40%);
+  border-top: 8px solid hsl(0deg, 0%, 60%);
+}
