--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@ strong {
   padding: 0 20px;
 }
 
+@media screen and (max-width: 800px) {
+  .gray-background {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
 .intro-chunk {
   padding-top: 96px;
   padding-bottom: 64px;
@@ -30,7 +37,7 @@ strong {
 
 .card {
   background-color: hsl(0deg, 0%, 100%);
-  width: 800px;
+  max-width: 800px;
   padding: 8px 24px;
   padding-bottom: 32px;
   border-bottom: 8px solid hsl(0deg, 0%, 60%);
